--- a/style.css
+++ b/style.css
@@ -1,10 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @font-face {
     font-family: norse-bold;
     src: url(./Norse-Bold.otf);
 }
 
 body {
-    font-family: norse-bold, sans-serif;
+    font-family: "Roboto", sans-serif;
+    margin: 0;
 }
 
+.container {
+    display: flex;
+    /* max-width: 100%; */
+    /* flex-wrap: wrap; */
+    /* justify-content: flex-start; */
 
+    /* height: 100vh; */
+    
+}
+
+.sidebar {
+    /* width: 800px; */
+    /* height: 100vh; */
+    position: relative;
+
+}
+
+.login {
+    display: flex;
+    /* justify-content: flex-end; */
+    /* align-items: start; */
+    flex-direction: column;
+    /* position: absolute; */
+    /* right: 0px; */
+    /* left: 1000px */
+    /* top: 0px; */
+    background-color: white;;
+    z-index: 1000;
+    /* height: 100vh; */
+    /* flex: 0 1 300px; */
+    /* min-width: 200px; */
+    /* max-width: 500px; */
+    /* position: absolute; */
+
+}
+
+.hero {
+    /* padding: 0; */
+    /* margin: 0px 50px; */
+    /* margin-left: 0; */
+    /* position: absolute; */
+    font-weight: 900;
+    font-size: 20px;
+    /* margin: auto; */
+    /* display: flex; */
+    
+}
+
+.bg-img {
+    /* max-width: 100%; */
+    max-height: 100vh;
+    margin: auto;
+    position: relative;
+
+}
