remove default styles

--- a/style.css
+++ b/style.css
@@ -4,16 +4,68 @@
     src: url(./Norse-Bold.otf);
 }
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     margin: 0;
+    /* overflow: hidden; */
+    /* vertical-align: top; */
 }
 
 .container {
     display: flex;
     /* max-width: 100%; */
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     /* justify-content: flex-start; */
+    margin: 0;
 
     /* height: 100vh; */
     
@@ -22,8 +74,13 @@ body {
 .sidebar {
     /* width: 800px; */
     /* height: 100vh; */
-    position: relative;
+    /* position: relative; */
+    margin: 0;
 
+}
+
+.background {
+    margin: 0;
 }
 
 .login {
@@ -36,7 +93,7 @@ body {
     /* left: 1000px */
     /* top: 0px; */
     background-color: white;;
-    z-index: 1000;
+    /* z-index: 1000; */
     /* height: 100vh; */
     /* flex: 0 1 300px; */
     /* min-width: 200px; */
@@ -59,8 +116,9 @@ body {
 
 .bg-img {
     /* max-width: 100%; */
-    max-height: 100vh;
-    margin: auto;
-    position: relative;
+    max-height:100vh;
+    margin: 0;
+    /* margin: auto; */
+    /* position: relative; */
 
 }
