--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ body {
     margin: 0;
 }
 
+div {
+    line-height: 1.1;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -231,17 +235,17 @@ button {
     background-color: #596D48;
     border-radius: 10px;
     color: white;
-    padding: 20px 60px;
-    font-size: 1.5rem;
+    padding: 20px;
+    font-size: 1.25rem;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
     outline: none;
-    width: 300px;
+    width: 30%;
 }
 
 .account-text {
-    margin-top: 5%;
+    margin-top: 30px;
     font-weight: 500;
     font-size: 1rem;
 }
