--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ div {
     color: white;
 }
 
-a:link {
+a.unsplash:link {
     color: white;
 }
 
@@ -250,7 +250,7 @@ button {
     font-size: 1rem;
 }
 
-.login-link {
+a.login-link {
     color: #596D48;
     text-decoration: none;
     font-weight: 900;
